--- a/create.html
+++ b/create.html
@@ -11,7 +11,7 @@
 <header class="nav">
   <div class="logo">SOLANA</div>
   <nav>
-    <a href="#">Learn</a>
+    <a href="./index.html">Learn</a>
     <a href="#">Build</a>
     <a href="#">Network</a>
     <a href="#">Community</a>
